updated @JoinColumn and added validation on id in controller and added @NotEmpty @Valid in CreateOrderRequestDTO